meta tags for seo

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,8 +16,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="full stack website created using mern stack, which is an online ecommerce website for buying and selling clothes."
     />
+    <meta name="robots" content="index, follow"/>
+    <meta name="keywords" content="HTML, CSS, JAVASCRIPT, MONGODB, REACTJS, NODEJS, EXPRESSJS, EMAILJS, BCRYPTJS" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
