--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
       content="full stack website created using mern stack, which is an online ecommerce website for buying and selling clothes."
     />
     <meta name="robots" content="index, follow"/>
-    <meta name="keywords" content="HTML, CSS, JAVASCRIPT, MONGODB, REACTJS, NODEJS, EXPRESSJS, EMAILJS, BCRYPTJS" />
+    <meta name="keywords" content="Fashion Up, Nike Shirt, Nike T-Shirt, Peter England, Under Amour, Zara, Guess, Gucci, Clothing, Trends" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
